--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,6 +54,10 @@ body {
   margin-bottom: 1rem;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 
 /* Flashcard */
 
@@ -62,6 +66,7 @@ body {
   width: 100%;
   height: 200px;
   cursor: pointer;
+  overflow: hidden;
 }
 .flip-card-inner {
   position: relative;
@@ -69,6 +74,7 @@ body {
   height: 100%;
   transition: transform 0.6s;
   transform-style: preserve-3d;
+  will-change: transform;
 }
 .flip-card.flipped .flip-card-inner {
   transform: rotateY(180deg);
